# Bellerophon

./: .gitignore  CMakeLists.txt  README.md  template.param
doc/doxygen/html/: AprxContext_8h_source.html  AprxTechnique_8h_source.html  BellerophonTool_8h_source.html  Context_8h.html  Context_8h_source.html  EvolutionContext_8h_source.html  ExecutionEngineHelper_8h_source.html  FlapAprxContext_8h_source.html  FlapAprxTechnique_8h_source.html  Log_8cpp.html  Log_8h.html  Log_8h_source.html  LoopPerforationAprx_8h_source.html  Utils_8cpp.html  Utils_8h.html  Utils_8h_source.html  annotated.html  classFlapAprxTechnique-members.html  classFlapAprxTechnique.html  classLoopPerforationContext-members.html  classLoopPerforationContext.html  classbellerophon_1_1core_1_1AprxContext-members.html  classbellerophon_1_1core_1_1AprxContext.html  classbellerophon_1_1core_1_1AprxObjectiveVectorTraits-members.html  classbellerophon_1_1core_1_1AprxObjectiveVectorTraits.html  classbellerophon_1_1core_1_1AprxTechnique-members.html  classbellerophon_1_1core_1_1AprxTechnique.html  classbellerophon_1_1core_1_1EvolutionContext-members.html  classbellerophon_1_1core_1_1EvolutionContext.html  classbellerophon_1_1core_1_1aprx-members.html  classbellerophon_1_1core_1_1aprx.html  classbellerophon_1_1core_1_1aprxEval-members.html  classbellerophon_1_1core_1_1aprxEval.html  classbellerophon_1_1engine_1_1ExecutionEngineHelper-members.html  classbellerophon_1_1engine_1_1ExecutionEngineHelper.html  classbellerophon_1_1engine_1_1ModuleHelper.html  classbellerophon_1_1flapContext_1_1FlapAprxContext-members.html  classbellerophon_1_1flapContext_1_1FlapAprxContext.html  classbellerophon_1_1log_1_1BellerophonLogger-members.html  classbellerophon_1_1log_1_1BellerophonLogger.html  (+41 more)
example/: compile_commands.json  launch.sh
example/aprxCode/: flap_float_report.csv  test.cpp
include/: Log.h  Utils.h
include/Core/: AprxContext.h  AprxTechnique.h  EvolutionContext.h
include/ExecutionEngineHelper/: ExecutionEngineHelper.h
include/Tool/: BellerophonTool.h
src/: CMakeLists.txt  Doxyfile.in  Log.cpp  Utils.cpp  main.cpp
src/Core/: AprxContext.cpp  CMakeLists.txt  EvolutionContext.cpp
src/ExecutionEngineHelper/: CMakeLists.txt  ExecutionEngineHelper.cpp
src/Plugins/: CMakeLists.txt
src/Plugins/FLAP/: CMakeLists.txt  FlapAprxContext.cpp  FlapAprxTechnique.cpp
src/Plugins/LoopPerforation/: CMakeLists.txt  LoopAprxContext.cpp  LoopAprxTechnique.cpp
src/Tool/: BellerophonTool.cpp  CMakeLists.txt
(+97 files in other folders)
